Use newer version of JSROOT in JSRootEventLoader

--- a/packages/phoenix-event-display/package.json
+++ b/packages/phoenix-event-display/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.4.0",
     "dat.gui": "^0.7.9",
+    "jsroot": "^7.1.0",
     "jszip": "^3.10.0",
     "stats-js": "^1.0.1",
     "three": "^0.140.2"
